<resources>
    <string name="app_name">ChoiceTestLabDemo</string>

    <!--Main Activity-->
    <string name="get_permission">Please allow the permission</string>
    <string name="location_service">Location using service</string>
    <string name="locality">Locality</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="country_code">Country Code</string>
    <string name="country_name">Country Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="enable_gps_prompt">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sample_text">Sample text</string>
    <string name="multiItemView">MultiItem RecyclerView</string>
    <string name="start_location">Start Location</string>
    <string name="stop_location">Stop Location</string>
    <string name="location_service_stopped">Location Service Stopped</string>
    <string name="location_service_started">Location Service Started</string>
    <string name="view_info">Adding four views randomly</string>

</resources>
